gap btw image bug fix

--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@
     width: 35px;
   }
   50% {
-    width: 50%;
+    width: 51%;
   }
   0% {
     width: 35px;
@@ -194,7 +194,7 @@ html {
   background-image: url("images/Goku-4k.jpg");
 
   height: 100%;
-  width: 50%;
+  width: 51%;
   top: 0%;
 
   background-position: center;
@@ -208,8 +208,8 @@ html {
   position: absolute;
   background-image: url("images/goku-face.jpg");
 
-  height: 50%;
-  width: 50%;
+  height: 51%;
+  width: 51%;
   top: 0%;
   right: 0%;
 
@@ -224,8 +224,8 @@ html {
   position: absolute;
   background-image: url("images/goku-half-body.jpg");
 
-  height: 50%;
-  width: 50%;
+  height: 51%;
+  width: 51%;
   top: 50%;
   right: 0%;
 
@@ -241,7 +241,7 @@ html {
   background-image: url("images/standing-goku.jpg");
 
   height: 100%;
-  width: 50%;
+  width: 51%;
   top: 0%;
 
   background-position: center;
@@ -255,8 +255,8 @@ html {
   position: absolute;
   background-image: url("images/red-goku.jpg");
 
-  height: 50%;
-  width: 50%;
+  height: 51%;
+  width: 51%;
   top: 0%;
   right: 0%;
 
@@ -271,8 +271,8 @@ html {
   position: absolute;
   background-image: url("images/golden-hair-goku.jpg");
 
-  height: 50%;
-  width: 50%;
+  height: 51%;
+  width: 51%;
   top: 0%;
   left: 100%;
 
@@ -288,8 +288,8 @@ html {
   position: absolute;
   background-image: url("images/blue-golden-bg-goku.jpg");
 
-  height: 50%;
-  width: 50%;
+  height: 51%;
+  width: 51%;
   top: 50%;
   left: 100%;
 
@@ -305,7 +305,7 @@ html {
   background-image: url("images/blue-hair-goku.jpg");
 
   height: 100%;
-  width: 50%;
+  width: 51%;
   top: 0%;
   right: 0%;
 
@@ -320,8 +320,8 @@ html {
   position: absolute;
   background-image: url("images/goku-face.jpg");
 
-  height: 50%;
-  width: 50%;
+  height: 51%;
+  width: 51%;
   top: 0%;
   right: 0%;
 
@@ -336,8 +336,8 @@ html {
   position: absolute;
   background-image: url("images/goku-half-body.jpg");
 
-  height: 50%;
-  width: 50%;
+  height: 51%;
+  width: 51%;
   top: 50%;
   right: 0%;
 
@@ -353,7 +353,7 @@ html {
   background-image: url("images/Goku-4k.jpg");
 
   height: 100%;
-  width: 50%;
+  width: 51%;
   top: 0%;
 
   background-position: center;
@@ -370,7 +370,7 @@ html {
   background-color: rgb(26, 26, 117);
 
   height: 100%;
-  width: 50%;
+  width: 51%;
   top: 0%;
   right: 0%;
 
@@ -387,7 +387,7 @@ html {
   background-color: rgba(170, 146, 11, 0.906);
 
   height: 100%;
-  width: 50%;
+  width: 51%;
   top: 0%;
 
   background-position: center;
@@ -403,7 +403,7 @@ html {
   background-image: url("images/standing-goku.jpg");
 
   height: 100%;
-  width: 50%;
+  width: 51%;
   top: 0%;
   right: 0%;
 
@@ -419,7 +419,7 @@ html {
   background-image: url("images/blue-hair-goku.jpg");
 
   height: 100%;
-  width: 50%;
+  width: 51%;
   top: 0%;
 
   background-position: center;
@@ -435,7 +435,7 @@ html {
   background-color: black;
 
   height: 100%;
-  width: 50%;
+  width: 51%;
   top: 0%;
   right: 0%;
 
@@ -452,7 +452,7 @@ html {
   background-color: rgb(223, 177, 10);
 
   height: 100%;
-  width: 50%;
+  width: 51%;
   top: 0%;
   right: 0%;
 
@@ -469,7 +469,7 @@ html {
   background-image: url("images/standing-goku.jpg");
 
   height: 100%;
-  width: 50%;
+  width: 51%;
   top: 0%;
 
   background-position: center;
@@ -484,8 +484,8 @@ html {
   position: absolute;
   background-image: url("images/vegeta-dragon-ball.jpg");
 
-  height: 50%;
-  width: 50%;
+  height: 51%;
+  width: 51%;
   top: 0%;
 
   background-position: center;
@@ -500,8 +500,8 @@ html {
   position: absolute;
   background-image: url("images/red-goku.jpg");
 
-  height: 50%;
-  width: 50%;
+  height: 51%;
+  width: 51%;
   top: 50%;
 
   background-position: center;
@@ -516,8 +516,8 @@ html {
   position: absolute;
   background-color: grey;
 
-  height: 50%;
-  width: 50%;
+  height: 51%;
+  width: 51%;
   top: 0%;
   right: 0%;
 
@@ -533,8 +533,8 @@ html {
   position: absolute;
   background-image: url("images/goku-face.jpg");
 
-  height: 50%;
-  width: 50%;
+  height: 51%;
+  width: 51%;
   top: 50%;
   right: 0;
 
@@ -550,8 +550,8 @@ html {
   position: absolute;
   background-image: url("images/goku-face.jpg");
 
-  height: 50%;
-  width: 50%;
+  height: 51%;
+  width: 51%;
   top: 0%;
 
   background-position: center;
@@ -566,8 +566,8 @@ html {
   position: absolute;
   background-color: grey;
 
-  height: 50%;
-  width: 50%;
+  height: 51%;
+  width: 51%;
   top: 50%;
 
   background-position: center;
@@ -582,8 +582,8 @@ html {
   position: absolute;
   background-color: rgba(255, 166, 0, 0.78);
 
-  height: 50%;
-  width: 50%;
+  height: 51%;
+  width: 51%;
   top: 0%;
   right: 0;
 
@@ -599,8 +599,8 @@ html {
   position: absolute;
   background-image: url("images/goku-half-body.jpg");
 
-  height: 50%;
-  width: 50%;
+  height: 51%;
+  width: 51%;
   top: 50%;
   right: 0;
 
@@ -617,7 +617,7 @@ html {
   background-image: url("images/standing-goku.jpg");
 
   height: 100%;
-  width: 50%;
+  width: 51%;
   top: 0%;
 
   background-position: center;
@@ -632,7 +632,7 @@ html {
   position: absolute;
   background-color: black;
   height: 100%;
-  width: 50%;
+  width: 51%;
   top: 0%;
   right: 0%;
   background-position: center;
